src/partials/modules/_sidebar.sass
@import ../../variables/modules/sidebar.variables

//*******************************//
//            Variations
//*******************************//

//*******************************//
//             Main
//*******************************//

.ts.sidebar
    height     : 100vh
    position   : absolute
    transition : transform $sidebar_easingDuration $sidebar_timeingFunction
    will-change: transform
    visibility : hidden
    overflow   : scroll
    z-index    : $z_sidebar

    backface-visibility       : hidden
    -webkit-overflow-scrolling: touch

.ts.sidebar:not(.menu)
    background-color: $white
    padding         : $sidebar_padding
    border          : $sidebar_border
    border-top      : 0
    border-bottom   : 0

//-------------------//
//    Sidebar Menu
//-------------------//

.ts.sidebar.menu
    border-top   : 0
    border-bottom: 0
    border-radius: 0
    box-shadow   : none
    margin       : 0

//-------------------//
//     Direction
//-------------------//

.ts.left.sidebar
    left       : 0
    transform  : translate3d(-100%, 0, 0)
    border-left: 0
.ts.right.sidebar
    right       : 0
    transform   : translate3d(100%, 0%, 0)
    border-right: 0
.ts.top.sidebar
    top      : 0
    transform: translate3d(0, -100%, 0)
.ts.bottom.sidebar
    bottom   : 0
    transform: translate3d(0, 100%, 0)

//-------------------//
//       Padded
//-------------------//

.ts.padded.sidebar
    padding: $sidebar_paddedPadding
.ts.sidebar[class*="very padded"]
    padding: $sidebar_veryPaddedPadding

//-------------------//
//       Fitted
//-------------------//

.ts.fitted.sidebar
    padding: 0

//-------------------//
//     Overlapped
//-------------------//

.ts.overlapped.sidebar
    z-index   : $z_sidebar_overlapped
.ts.right.overlapped.sidebar.visible
    box-shadow: $sidebar_rightOverlappedBoxShadow
.ts.left.overlapped.sidebar.visible
    box-shadow: $sidebar_leftOverlappedBoxShadow

//-------------------//
//     Animating
//-------------------//

.ts.animating.sidebar
    visibility: visible

//-------------------//
//     Visibility
//-------------------//

.ts.visible.sidebar
    visibility: visible
    transform : translate3d(0, 0, 0)

//*******************************//
//            Pusher
//*******************************//

.pusher
    position: fixed
    top     : 0
    right   : 0
    left    : 0
    bottom  : 0
    width   : 100vw

    overflow-y: scroll
    background: #fff
    transition: left $sidebar_easingDuration $sidebar_timeingFunction, right $sidebar_easingDuration $sidebar_timeingFunction

.pusher.squeezable
    transition: left $sidebar_easingDuration $sidebar_timeingFunction, right $sidebar_easingDuration $sidebar_timeingFunction, width $sidebar_easingDuration $sidebar_timeingFunction

.pusher[data-pusher-lock='true']
    overflow: hidden

//-------------------//
//     Squeezable
//-------------------//

.ts.visible.sidebar:not(.overlapped)[class*="very thin"] ~ .pusher.squeezable
    width: calc(100vw - #{$sidebar_veryThinWidth})
.ts.visible.thin.sidebar:not(.overlapped):not([class*="very thin"]) ~ .pusher.squeezable
    width: calc(100vw - #{$sidebar_thinWidth})
.ts.visible.sidebar:not(.overlapped) ~ .pusher.squeezable
    width: calc(100vw - #{$sidebar_width})
.ts.visible.wide.sidebar:not(.overlapped):not([class*="very wide"]) ~ .pusher.squeezable
    width: calc(100vw - #{$sidebar_wideWidth})
.ts.visible.sidebar:not(.overlapped)[class*="very wide"] ~ .pusher.squeezable
    width: calc(100vw - #{$sidebar_veryWideWidth})

//-------------------//
//      Offsets
//-------------------//

.ts.left.visible.sidebar:not(.overlapped)[class*="very thin"] ~ .pusher
    left: $sidebar_veryThinWidth
.ts.left.visible.thin.sidebar:not(.overlapped):not([class*="very thin"]) ~ .pusher
    left: $sidebar_thinWidth
.ts.left.visible.sidebar:not(.overlapped) ~ .pusher
    left: $sidebar_width
.ts.left.visible.wide.sidebar:not(.overlapped):not([class*="very wide"]) ~ .pusher
    left: $sidebar_wideWidth
.ts.left.visible.sidebar:not(.overlapped)[class*="very wide"] ~ .pusher
    left: $sidebar_veryWideWidth

.ts.right.visible.sidebar:not(.overlapped)[class*="very thin"] ~ .pusher:not(.squeezable)
    left: -$sidebar_veryThinWidth
.ts.right.visible.thin.sidebar:not(.overlapped):not([class*="very thin"]) ~ .pusher:not(.squeezable)
    left: -$sidebar_thinWidth
.ts.right.visible.sidebar:not(.overlapped) ~ .pusher:not(.squeezable)
    left: -$sidebar_width
.ts.right.visible.wide.sidebar:not(.overlapped):not([class*="very wide"]) ~ .pusher:not(.squeezable)
    left: -$sidebar_wideWidth
.ts.right.visible.sidebar:not(.overlapped)[class*="very wide"] ~ .pusher:not(.squeezable)
    left: -$sidebar_veryWideWidth

//-------------------//
// Secondary & Tertiary
//-------------------//

.ts.secondary.sidebar
    background-color: $sidebar_secondaryBackgroundColor
.ts.tertiary.sidebar
    background-color: $sidebar_tertiaryBackgroundColor

//-------------------//
//       Dimmed
//-------------------//

.pusher:after
    position: fixed
    top     : 0
    right   : 0
    left    : 0
    bottom  : 0
    content : ''

    background-color: $sidebar_dimmerBackgroundColor

    overflow   : hidden
    opacity    : 0
    transition : all .35s
    will-change: opacity
    z-index    : $z_pusherDimmer
    visibility: hidden

.dimmed.pusher
    +extend(no-select)

.dimmed.pusher:after
    opacity   : 1
    visibility: visible

//-------------------//
//       Width
//-------------------//

.ts.sidebar[class*="very thin"]
    width: $sidebar_veryThinWidth
.ts.thin.sidebar:not([class*="very thin"])
    width: $sidebar_thinWidth
.ts.sidebar
    width: $sidebar_width
.ts.wide.sidebar:not([class*="very wide"])
    width: $sidebar_wideWidth
.ts.sidebar[class*="very wide"]
    width: $sidebar_veryWideWidth

//-------------------//
//   RWD Sidebar Menu
//-------------------//

.ts.wide.sidebar:not([class*="very wide"]),
.ts.sidebar[class*="very wide"]
    +rwd-serious(mobile)
        width : 100vw
        border: 0

